crates/pgls_pretty_print/tests/snapshots/single/tests__range_table_func_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/range_table_func_0.sql
snapshot_kind: text
---
SELECT
  *
FROM
  XMLTABLE(

    '/root'
    PASSING '<root><item>value</item></root>'
    COLUMNS
      item TEXT PATH 'item'
  );
