crates/pgls_pretty_print/tests/snapshots/single/tests__range_table_sample_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/range_table_sample_0_100.sql
snapshot_kind: text
---
SELECT * FROM employees TABLESAMPLE system (10);
