crates/pgls_pretty_print/tests/snapshots/single/tests__range_tbl_ref_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/range_tbl_ref_0.sql
snapshot_kind: text
---
SELECT t1.a FROM t1, t2;
