crates/pgls_pretty_print/tests/snapshots/single/tests__reassign_owned_stmt_0_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/reassign_owned_stmt_0.sql
snapshot_kind: text
---
REASSIGN OWNED BY olduser TO newuser;
