crates/pgls_pretty_print/tests/snapshots/single/tests__refresh_mat_view_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/refresh_mat_view_stmt_0_100.sql
snapshot_kind: text
---
REFRESH MATERIALIZED VIEW myview;
